# comfybot

./: .gitignore  README.md  Taskfile.yaml  pyproject.toml
docs/: roadmap.md
src/: cli.py  comfyapi.py  comfybot.py  genai.py  test_comfyapi.py
src/comfyapi/: __init__.py  api.py  models.py
